crud de emprestimo
